// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-monetary Renders with all props provided 1`] = `
<form-control-monetary>
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="amount" part="label text color font-family">
      Amount
    </label>
    <small class="form-text text-muted" id="form-help-text-amount" part="text color font-family">
      Enter payment amount
    </small>
    <div class="input-group">
      <span class="input-group-text" part="input-group-text">
        $
      </span>
      <input class="form-control is-invalid" id="amount" name="amount" part="input-invalid input text color font-family background-color" type="text" value="15.00">
    </div>
    <small class="form-text text-danger" id="form-error-text-amount" part="text-danger text color font-family">
      Invalid amount
    </small>
  </div>
</form-control-monetary>
`;

exports[`form-control-monetary renders correctly with default props 1`] = `
<form-control-monetary>
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="amount" part="label text color font-family">
      Amount
    </label>
    <div class="input-group">
      <span class="input-group-text" part="input-group-text">
        $
      </span>
      <input class="form-control" id="amount" name="amount" part="input text color font-family background-color" type="text" value="0.00">
    </div>
  </div>
</form-control-monetary>
`;
